[build-system]
build-backend = 'trampolim'
requires = ['trampolim']

[project]
name = 'elfo'
version = '0.0.0'
description = 'ELF file deserializer and serializer library'
readme = 'README.md'
requires-python = '>=3.7'
license = { file = 'LICENSE' }
keywords = ['elf', 'deserializer', 'serializer', 'linux']
authors = [
  { name = 'Filipe Laíns', email = 'lains@riseup.net' },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python'
]

dependencies = [
  'typing-extensions ; python_version < "3.8"',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov',
]
docs = [
  'furo>=2021.04.11b34',
  'sphinx~=3.0',
]

[project.urls]
homepage = 'https://github.com/FFY00/python-elfo'
repository = 'https://github.com/FFY00/python-elfo'
documentation = 'https://elfo.readthedocs.io'
changelog = 'https://elfo.readthedocs.io/en/latest/changelog.html'
